--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -1,16 +1,15 @@
-<!-- {% extends "base.html" %} -->
-{% include "blog/post-comments.html" %}
+{% extends "base.html" %}
 {% load blog_extras %}
 {% block content %}
 <h2>{{ post.title }}</h2>
 {% row %}
-<div class="col">
-<!-- {% include "blog/post-byline.html" %} -->
-</div>
+    <div class="col">
+        {% include "blog/post-byline.html" %}
+    </div>
 {% endrow %}
 {% row %}
-<div class="col">
-{{ post.content|safe }}
-</div>
+    <div class="col">
+        {{ post.content|safe }}
+    </div>
 {% endrow %}
 {% endblock %}
