--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -12,4 +12,10 @@
         {{ post.content|safe }}
     </div>
 {% endrow %}
+<!-- existing code here -->
+{% row %}
+    {% col %}
+        {% recent_posts post %}
+    {% endcol %}
+{% endrow %}
 {% endblock %}
